--- a/src/template/index.html
+++ b/src/template/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
-
+    <meta name="dicoding:email" content="f183x0345@dicoding.org">
+    
     <title>anchor</title>
     <meta content="" name="description" />
     <meta content="" name="keywords" />
